--- a/modules/web_server/static/styles/main.css
+++ b/modules/web_server/static/styles/main.css
@@ -73,6 +73,10 @@ label {
   box-shadow: 0 0 15px 20px white;
 }
 
+img {
+  image-rendering: -webkit-optimize-contrast;
+}
+
 body {
   height: 100vh;
 }
